# sensor-health-drift-monitor

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml
docs/: KINETIC_GAIN_EMBEDDED.md  ORIGIN.md  architecture.md
scripts/: render_readme_assets.ps1  seo-meta.mjs
src/: core.rs  lib.rs  main.rs  render.rs
