[package]
name = "sensor-health-drift-monitor"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Rust robotics operator surface for sensor drift, calibration freshness, blind-zone pressure, and override-safe fleet posture."

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
